--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "react-lottie": "^1.2.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.167.1",
-    "three-globe": "^2.31.1"
+    "three": "0.167.1",
+    "three-globe": "2.31.1"
   },
   "devDependencies": {
     "@types/node": "^20",
